Change data path string

--- a/CovidNotebook.ipynb
+++ b/CovidNotebook.ipynb
@@ -37,11 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid_data = pandas.read_csv(\"C:\\\\Users\\Aleksander\\\\Desktop\\\\SIWB\\\\Jupyter\\\\Jupyter Project\\\\covid-19-data\\\\data\\\\time-series-19-covid-combined.csv\")"
+    "data_file_path = \"covid-19-data/data/time-series-19-covid-combined.csv\"\n",
+    "covid_data = pandas.read_csv(data_file_path)"
    ]
   },
   {
