Add missing data

--- a/CovidNotebook.ipynb
+++ b/CovidNotebook.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,8 @@
     "last_date = temp_covid_data.Date.iloc[0]\n",
     "\n",
     "covid_last_data = covid_data[covid_data['Date'] == last_date]\n",
-    "covid_poland_data = covid_data[covid_data[\"Country/Region\"] == \"Poland\"]"
+    "covid_poland_data = covid_data[covid_data[\"Country/Region\"] == \"Poland\"]\n",
+    "covid_poland_last_data = covid_last_data[covid_data[\"Country/Region\"] == \"Poland\"]\n"
    ]
   },
   {
@@ -104,17 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Label(value='Total COVID-19 cases in the world')",
+      "text/plain": "Label(value='Last COVID-19 cases in the world')",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "647622a3e1a1463aa967390d99c24a23"
+       "model_id": "d57df86317ff492f998ce6a1848d93e6"
       }
      },
      "metadata": {}
@@ -126,7 +127,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8b8919f38ded49b9a8105bc58fc0bd1f"
+       "model_id": "7e935a090c3c41ee85cd8ded0fbde546"
       }
      },
      "metadata": {}
@@ -138,7 +139,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0c1bb91b1ddb475fb50f4229377bac93"
+       "model_id": "dbfcba4f5557481a9ec051ed68c966d6"
       }
      },
      "metadata": {}
@@ -150,7 +151,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "34f77e5dc1874cb297fb15388a403cdd"
+       "model_id": "8bb8aef6e47b4c38bf4b02042f2116e5"
       }
      },
      "metadata": {}
@@ -162,7 +163,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bdad1f9286024c2db9c0f73a6757b4be"
+       "model_id": "d382e4c6c39949b8bf1165ac843d5370"
       }
      },
      "metadata": {}
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "58404c0689624ddd9785e8646f924f2e"
+       "model_id": "790357c049a4462ea2bbaa0d85be21c1"
       }
      },
      "metadata": {}
